[package]
name = "ptolemy-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ptolemy-core = { path = "../ptolemy-core" }
ptolemy-storage = { path = "../ptolemy-storage" }
axum.workspace = true
axum-extra.workspace = true
hex = "0.4"
hmac.workspace = true
jsonwebtoken = { workspace = true }
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
openidconnect.workspace = true
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
urlencoding = "2"
uuid.workspace = true
