[package]
name = "ptolemy-geopackage"
description = "GeoPackage data store plugin for Ptolemy — OGC GeoPackage file-based storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ptolemy-core = { path = "../ptolemy-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
